Fri Aug 19 14:25:51 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (proc_spawn_v, proc_spawn): should not wait the
	  spawned process.

	* process.c (proc_spawn_v): fix missing argument, and try with
	  /bin/sh only if failed with ENOEXEC.

Fri Aug 19 14:12:57 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (idle): raises a Net::IMAP::Error when the
	  connection is closed.  based on the patch by Hugo Barauna.
	  [Bug #5190] [ruby-core:38930]

Fri Aug 19 13:18:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* configure.in: defines _DARWIN_UNLIMITED_SELECT if the target_os
	  is darwin.

Fri Aug 19 13:14:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* thread.c: add a description for the behavior of select(2) on
	  Mac OS X 10.7 (Lion).

Fri Aug 19 11:28:58 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (msg_att): accepts extra space before ')'.
	  based on the patch by art lussos.  [Bug #5163] [ruby-core:38820]

Wed Aug 17 23:01:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (cannot_be_coerced_into_BigDecimal):
	  remove duplication.

Wed Aug 17 15:27:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (cannot_be_coerced_into_BigDecimal):
	  add a new function for raising error when an object cannot coerce
	  into BigDecimal.  [Bug #5172]

	* ext/bigdecimal/bigdecimal.c (BigDecimalValueWithPrec): use
	  cannot_be_coerced_into_BigDecimal function.

	* ext/bigdecimal/bigdecimal.c (BigMath_s_exp): ditto.

	* ext/bigdecimal/bigdecimal.c (BigMath_s_log): ditto.

	* test/bigdecimal/test_bigdecimal.rb: test for the above changes.

	* test/bigdecimal/testbase.rb (under_gc_stress): add a new utility
	  method to run tests under the condition of GC.stress = true.

Wed Aug 17 10:16:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* rational.c (nurat_coerce): Rational#coerce should converts itself
	  into Complex if the argument is a Complex with non-zero imaginary
	  part.  [Bug #5020] [ruby-dev:44088]
